--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">KotlinAndroidDemo</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    
+    <string name="flickr_image_url">http://farm%1$s.static.flickr.com/%2$s/%3$s_%4$s.jpg</string>
+    <string name="flickr_fetching_images">Fetching Images&#8230;</string>
 </resources>
